# tuhh_nit_coding_ss2025

./: .gitignore  README.md  project.txt  pyproject.toml
src/: data_analysis.ipynb  start.ipynb
src/titanic/: README.md  submission.csv  titanic.ipynb
