[project]
name = "coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "reflex>=0.7.9",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "simpleaudio>=1.0.4",
    "sounddevice>=0.5.1",
    "statsmodels>=0.14.4",
    "word2number>=1.1",
]
